--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
      </section>
                           <div class="food">
-                              <img id="size" src="images/blogs/02.jpg" alt="">
+                              <img id="size" src="images/blogs/02.jpeg" alt="">
                               <h2 class="secound">Birthday message</h2>
 
                               <p></p>
