--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ fa-whatsapp"></i></a>
         <a target="_blank" 
 href="https://www.instagram.com/azkan_e"><i class="fa-brands fa-instagram"></i></a>
     </div>
+</div>
+</div>
 <br>
 <p id="copy">&copy;Copyright 2023 Azkan</p>
 </footer>
