--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                                 var jam = hari.getHours();
                                 if (jam >= 0 && jam < 12) {
                               </script>
+                 </header>
+    </main>
 <footer class="text-position gave">
     <h5 class="color-white">Design and Build by <br>
     <span id="col-org" >Azkan</span> </h5>
