--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <h2 class="secound">Birthday message</h2>
                         
                         <p>Selamat Ulang Tahun KAAAKK I HOPE YOU ALWAYS HAPPY dan aku juga berharap tetap sehat dan panjang umur. Baik-baik orang baik</p>
-                            <h4>by <a target="_blank" href="https://www.instagram.com/azkan_e"">AZKAN</a></h4>
+                            <h4>by <a target="_blank" href="https://www.instagram.com/azkan_e">AZKAN</a></h4>
                     </div>
      </section>
                           <div class="food">
@@ -42,7 +42,7 @@
                               <h2 class="secound">Birthday message</h2>
 
                               <p></p>
-                                  <h4>by <a target="_blank" href="https://www.instagram.com/azkan_e"">RAISHA</a></h4>
+                                  <h4>by <a target="_blank" href="https://www.instagram.com/rraisyy_/?igshid=OGQ5ZDc2ODk2ZA%3D%3D">RAISA</a></h4>
                           </div>
   <div class="food">
 <video src="images/blogs/002.mp4" height="350px" controls></video>
@@ -50,7 +50,7 @@
 <p> Kami ucapkan happy birthday untuk kakak terimakasi sudah mendengar cerita kami berdua sehat selaluu</p>
   <h4>by <a target="_blank" 
     href="https://www.instagram.com/azkan_e/">AZKAN</a></h4> <h4>AND <a target="_blank" 
-    href="https://www.instagram.com//">RAISHA</a></h4>
+    href="https://www.instagram.com/rraisyy_/?igshid=OGQ5ZDc2ODk2ZA%3D%3D">RAISA</a></h4>
 </div>
                       <h7 id="waktu"></h7>
                               <script type="text/javascript">
