--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                               <img id="size" src="images/blogs/02.jpeg" alt="">
                               <h2 class="secound">Birthday message</h2>
 
-                              <p></p>
+                              <p>Selamat ulang tahun kak Husni! Doa dan harapan terbaik kupanjatkan khusus untuk kak Husni hari ini. Semoga senantiasa sehat, bahagia, dan diberikan keberkahan umur yang panjang.</p>
                                   <h4>by <a target="_blank" href="https://www.instagram.com/rraisyy_/?igshid=OGQ5ZDc2ODk2ZA%3D%3D">RAISA</a></h4>
                           </div>
   <div class="food">
